--- a/package.json
+++ b/package.json
@@ -45,126 +45,155 @@
       {
         "key": "Escape",
         "command": "extension.vim_escape",
+        "description": "End insert or Replace mode",
         "when": "editorTextFocus"
       },
       {
         "key": "Backspace",
         "command": "extension.vim_backspace",
+        "description": "delete a character to the left",
         "when": "editorTextFocus"
       },
       {
         "key": "Delete",
         "command": "extension.vim_delete",
+        "description": "delete the character under the cursor",
         "when": "editorTextFocus && vim.mode == 'Normal Mode'"
       },
       {
         "key": "tab",
         "command": "extension.vim_tab",
+        "description": "Go to [count] newer position in the jump list",
         "when": "editorFocus && vim.mode == 'Normal Mode'"
       },
       {
         "key": "ctrl+r",
         "command": "extension.vim_ctrl+r",
+        "description": "Redo [count] changes which were undone",
         "when": "editorTextFocus"
       },
       {
         "key": "ctrl+f",
         "command": "extension.vim_ctrl+f",
+        "description": "Scroll window [count] pages Forwards (downwards) in the buffer",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+b",
         "command": "extension.vim_ctrl+b",
+        "description": "Scroll window [count] pages Backwards (upward) in the buffer",
         "when": "editorTextFocus && vim.mode != 'Insert Mode'"
       },
       {
         "key": "ctrl+h",
         "command": "extension.vim_ctrl+h",
+	      "description": "delete character to the left (insert mode)",
         "when": "editorTextFocus && vim.mode == 'Insert Mode'"
       },
       {
         "key": "ctrl+e",
         "command": "extension.vim_ctrl+e",
+        "description": "Scroll up",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+y",
         "command": "extension.vim_ctrl+y",
+        "description": "go to earlier change",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+u",
         "command": "extension.vim_ctrl+u",
+        "description": "Scroll up half a screen",
         "when": "editorTextFocus"
       },
       {
         "key": "ctrl+v",
         "command": "extension.vim_ctrl+v",
+        "description": "Paste ??",
         "when": "editorTextFocus && vim.mode != 'Insert Mode' && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+d",
         "command": "extension.vim_ctrl+d",
+        "description": "Scroll down half a screen",
         "when": "editorTextFocus && vim.useCtrlKeys"
-      },
+      }
       {
         "key": "ctrl+[",
         "command": "extension.vim_ctrl+[",
+        "description": "End insert or replace mode",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+w",
         "command": "extension.vim_ctrl+w",
+        "description": "Prefix for Window commands (i.e. ctrl-w B)",
         "when": "editorTextFocus"
       },
       {
         "key": "ctrl+c",
         "command": "extension.vim_ctrl+c",
+        "description": "Interrupt current (search) command",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+a",
         "command": "extension.vim_ctrl+a",
+        "description": "Add [count] to the number or alphabetic character at
+			or after the cursor.",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+x",
         "command": "extension.vim_ctrl+x",
+        "description": "Subtract [count] from the number or alphabetic character at
+			or after the cursor.",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+t",
         "command": "extension.vim_ctrl+t",
+        "description": "Jump to [count] older entry in the tag stack",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+pagedown",
         "command": "extension.vim_ctrl+pagedown",
+        "description": "Scroll window [count] pages Forwards (downwards) in
+			the buffer.",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "ctrl+pageup",
         "command": "extension.vim_ctrl+pageup",
+        "description": "Scroll window [count] pages Backwards (upward) in
+			the buffer.",
         "when": "editorTextFocus && vim.useCtrlKeys"
       },
       {
         "key": "left",
         "command": "extension.vim_left",
+        "description": "move left one character",
         "when": "editorTextFocus && vim.mode != 'Insert Mode'"
       },
       {
         "key": "right",
         "command": "extension.vim_right",
+        "description": "move right one character",
         "when": "editorTextFocus && vim.mode != 'Insert Mode'"
       },
       {
         "key": "up",
         "command": "extension.vim_up",
+        "description": "move up one line",
         "when": "editorTextFocus && vim.mode != 'Insert Mode'"
       },
       {
         "key": "down",
         "command": "extension.vim_down",
+        "description": "move down one line",
         "when": "editorTextFocus && vim.mode != 'Insert Mode'"
       }
     ],
